--- a/productos.html
+++ b/productos.html
@@ -8,7 +8,7 @@
 </head>
 <body class="fondo">
 
-    <h<header class="header">
+    <header class="header">
         <div class="logo">
             <img src="./imagenes/logo.png" alt="Logo de la marca">
         </div>
