--- a/productos.html
+++ b/productos.html
@@ -20,28 +20,28 @@
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>            
             </nav>
-        </header>
+    </header>
 
-        <div class="caja-principal">
-            <div class="caja">
-                CAJA 1
-            </div>
-            <div class="caja">
-                CAJA 2
-            </div>
-            <div class="caja">
-                CAJA 3
-            </div>
-            <div class="caja">
-                CAJA 4
-            </div>
-            <div class="caja">
-                CAJA 5
-            </div>
-            <div class="caja">
-                CAJA 6
-            </div>
+    <section class="Tarjetas">
+        <div class="Tarjeta-1">
+            <img src="./imagenes/Mate.jpg" alt="">
+            <h4>Mate</h4>
         </div>
+        <div class="Tarjeta-1">
+            <img src="./imagenes/Plato Ondo.jpg" alt="">
+            <h4>Plato ondo</h4>
+        </div>
+    </section> 
+    <section class="Tarjetas">
+        <div class="Tarjeta-2">
+            <img src="./imagenes/Porta saumerios.jpg" alt="">
+            <h4>Porta saumerios</h4>
+        </div>
+        <div class="Tarjeta-2">
+            <img src="./imagenes/Porta vela.jpg" alt="">
+            <h4>Porta vela</h4>
+        </div>
+    </section>
 
 </body>
 </html>
