se agrego una lista navegable para a futuro el cliente elija a que seccion de productos entrar

--- a/contacto.html
+++ b/contacto.html
@@ -16,11 +16,19 @@
                 <ul class="nav-links">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./productos.html">Productos</a></li>
-                    <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>            
             </nav>
         </header>
+        
+        <section class="Lista">
+            <nav>
+                <li class="Listas"><a href="./mate.html">Mate</a><img src="./imagenes/Mate.jpg" alt=Mate></li>
+                <li class="Listas"><a href="./plato ondo.html">Plato ondo</a><img src="./imagenes/Plato Ondo.jpg" alt="Plato ondo"></li>
+                <li class="Listas"><a href="./porta saumerios.html">Porta saumerios</a><img src="./imagenes/Porta saumerios.jpg" alt="Porta saumerios"></li>
+                <li class="Listas"><a href="./porta vela.html"> Porta vela</a><img src="./imagenes/Porta vela.jpg" alt="Porta vela"></li>
+            </nav>
+        </section>  
 
 </body>
 </html>
