se agrego una lista navegable para a futuro el cliente elija a que seccion de productos entrar y se borro la seccion de nosotro

--- a/contacto.html
+++ b/contacto.html
@@ -21,13 +21,15 @@
             </nav>
         </header>
         
-        <section class="Lista">
+        <section class="Productos">
             <nav>
-                <li class="Listas"><a href="./mate.html">Mate</a><img src="./imagenes/Mate.jpg" alt=Mate></li>
-                <li class="Listas"><a href="./plato ondo.html">Plato ondo</a><img src="./imagenes/Plato Ondo.jpg" alt="Plato ondo"></li>
-                <li class="Listas"><a href="./porta saumerios.html">Porta saumerios</a><img src="./imagenes/Porta saumerios.jpg" alt="Porta saumerios"></li>
-                <li class="Listas"><a href="./porta vela.html"> Porta vela</a><img src="./imagenes/Porta vela.jpg" alt="Porta vela"></li>
-            </nav>
+                <ul  class="Lista">
+                    <li class="Listas"><a href="./mate.html">Mate</a><img src="./imagenes/Mate.jpg" alt=Mate></li>
+                    <li class="Listas"><a href="./plato ondo.html">Plato ondo</a><img src="./imagenes/Plato Ondo.jpg" alt="Plato ondo"></li>
+                    <li class="Listas"><a href="./porta saumerios.html">Porta saumerios</a><img src="./imagenes/Porta saumerios.jpg" alt="Porta saumerios"></li>
+                    <li class="Listas"><a href="./porta vela.html"> Porta vela</a><img src="./imagenes/Porta vela.jpg" alt="Porta vela"></li>
+                </ul>
+                </nav>
         </section>  
 
 </body>
